[package]
name = "animus-provider-opencode"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "OpenCode provider plugin for Animus (drives the OpenCode CLI over ACP)"
repository = "https://github.com/launchapp-dev/animus-provider-opencode"
homepage = "https://github.com/launchapp-dev/animus-cli"
readme = "README.md"
default-run = "animus-provider-opencode"

[[bin]]
name = "animus-provider-opencode"
path = "src/main.rs"

[dependencies]
# Reuse the shared ACP client. This plugin is a thin wrapper that pins the
# harness to `opencode acp` and advertises provider_tool = "opencode", so the
# kernel routes OpenCode models here while ACP stays an internal transport
# detail.
animus-provider-acp = { git = "https://github.com/launchapp-dev/animus-provider-acp", tag = "v0.1.1" }

animus-plugin-protocol = { git = "https://github.com/launchapp-dev/animus-protocol", tag = "v0.1.17" }
animus-plugin-runtime  = { git = "https://github.com/launchapp-dev/animus-protocol", tag = "v0.1.17" }

serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
